<resources>
    <string name="app_name">Stuntech</string>
    <string name="title_home">Home</string>
    <string name="title_child">Child</string>
    <string name="title_account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_stuntingapp" translatable="false">StuntingApp</string>
    <string name="title_date" translatable="false">22 Jan 2022</string>
    <string name="title_null" translatable="false">null</string>
    <string name="title_name" translatable="false">Lorem Ipsum</string>
    <string name="title_bulan">Month</string>
    <string name="title_lorem_ipsum" translatable="false">Lorem Ipsum</string>
    <string name="title_readmore">Read more</string>
    <string name="title_good">Good</string>
    <string name="title_stuntingmaps">StuntingMaps</string>
    <string name="token" translatable="false">token</string>
    <string name="username" translatable="false">Username</string>
    <string name="name" translatable="false">Name</string>
    <string name="id" translatable="false">ID</string>
    <string name="title_care_nutrition">Care Nutrition</string>
    <string name="title_breakfast">Breakfast</string>
    <string name="foo" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eros iaculis tempus, lacus congue id iaculis. Eget odio amet amet in cras purus nisl vulputate. Pellentesque convallis amet nulla nunc nulla facilisis scelerisque velit. Placerat mi ullamcorper lacus malesuada cum molestie.</string>
    <string name="title_lunch">Lunch</string>
    <string name="title_dinner">Dinner</string>
    <string name="title_stunt_reminder">Stunting Reminder</string>
    <string name="title_add_reminder">Create Reminder</string>
    <string name="message_delete_data">are you sure you want to delete the data?</string>
    <string name="title_dialog_delete">Alert!</string>
    <string name="btn_my_profile">My Profile</string>
    <string name="title_stunting_info">Stunting Info</string>
    <string name="title_nutrition_info">Nutrition Info</string>
    <string name="title_stunting_trace">Stunting Trace</string>
    <string name="title_stunting_maps">Stunting Maps</string>
    <string name="title_stunting_health">Stunting Health</string>
    <string name="title_food_help">Food Help</string>
    <string name="title_hello_stunting">Hello Stunting</string>
    <string name="title_fun_stunting">Fun Stunting</string>
    <string name="title_stunting_tribute">Stunting Tribute</string>
    <string name="title_profile">Profile</string>
    <string name="channel_name">StunTech - Care your kids</string>
    <string name="channel_description">Care your kids, care our future</string>
    <string name="title_stunt_reminder_description">Care your kids, care our future</string>
    <string name="protein">Protein</string>
    <string name="carbo">Carbohidrat</string>
    <string name="fat">Fat</string>
    <string name="select_level">Select Level</string>
    <string name="contact_nutritionist">Contact Nutritionist</string>
    <string name="health_facilities">Health Facilities</string>


    <string name="dropdown_jenis_kelamin" translatable="false">Jenis Kelamin</string>
    <string-array name="jenis_kelamin_list">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>
    <string name="title_activity_reminder_v3" translatable="false">ReminderV3Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_repeat" translatable="false">Repeat</string>
    <string name="title_notes" translatable="false">Notes</string>

</resources>